--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gsap": "^3.12.4",
     "locomotive-scroll": "^4.1.4",
     "react": "^18.2.0",
+    "react-animated-cursor": "^2.11.2",
     "react-dom": "^18.2.0",
     "react-locomotive-scroll": "^0.2.2",
     "react-router-dom": "^6.21.1",
