--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@gsap/react": "^2.0.2",
     "@react-three/drei": "^9.93.0",
     "@react-three/fiber": "^8.15.13",
     "@testing-library/jest-dom": "^5.17.0",
@@ -11,6 +12,7 @@
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.0.3",
     "gsap": "^3.12.4",
+    "hamburgers": "^1.2.1",
     "locomotive-scroll": "^4.1.4",
     "react": "^18.2.0",
     "react-animated-cursor": "^2.11.2",
