--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "@gsap/react": "^2.0.2",
     "@react-three/drei": "^9.93.0",
     "@react-three/fiber": "^8.15.13",
+    "@seberm/react-marquee": "^1.1.9",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.0.3",
+    "formik": "^2.4.5",
     "gsap": "^3.12.4",
     "hamburgers": "^1.2.1",
     "locomotive-scroll": "^4.1.4",
@@ -19,10 +21,12 @@
     "react-dom": "^18.2.0",
     "react-locomotive-scroll": "^0.2.2",
     "react-router-dom": "^6.21.1",
+    "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
     "react-three-fiber": "^6.0.13",
     "three": "^0.160.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
