--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@react-three/drei": "^9.93.0",
     "@react-three/fiber": "^8.15.13",
     "@seberm/react-marquee": "^1.1.9",
+    "@studio-freight/react-lenis": "^0.0.40",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
