--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.0.3",
+    "firebase": "^10.7.1",
     "formik": "^2.4.5",
     "gsap": "^3.12.4",
     "hamburgers": "^1.2.1",
