--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "@gsap/react": "^2.0.2",
     "@react-three/drei": "^9.93.0",
     "@react-three/fiber": "^8.15.13",
-    "@seberm/react-marquee": "^1.1.9",
     "@studio-freight/react-lenis": "^0.0.40",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -18,9 +17,10 @@
     "gsap": "^3.12.4",
     "hamburgers": "^1.2.1",
     "locomotive-scroll": "^4.1.4",
-    "react": "^18.2.0",
+    "react": "^18.3.1",
     "react-animated-cursor": "^2.11.2",
     "react-dom": "^18.2.0",
+    "react-fast-marquee": "^1.6.4",
     "react-locomotive-scroll": "^0.2.2",
     "react-router-dom": "^6.21.1",
     "react-router-hash-link": "^2.4.3",
